--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
+.body {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    fill: 0;
+    background-color: #f4f4f4;
+    color: #333;
+}
+.header {
+    background-color: #333;
+    color: white;
+    fill: 0.5rem;
+    text-align: center;
+}
+
 .button {
     display: inline block;
     padding: 0.5rem 1rem;
     text-decoration: none;
-     
+    background-color: violet;
 }
